--- a/src/components/Educard.css
+++ b/src/components/Educard.css
@@ -1,7 +1,7 @@
 .Edu-card-container{
     padding: 20px 20px;
     border-radius: 10px;
-    background-color: #34335b;
+    background-color: rgb(31, 30, 45);
     width:90%;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
 }
 
 .Edu-card-container:hover {
-    border-color: rgba(1, 145, 255, 0.399);
+    border-color: rgba(0, 85, 150, 0.399);
     /*background-color: #33535b;*/
 }
 
@@ -26,23 +26,24 @@
 }
 
 .Edu-card-container h1 {
-    color: rgb(0, 153, 255);
+    color: rgb(221, 223, 224);
     font-size: 25px;
 }
 
 .Edu-card-container p {
     line-height: 1.2; 
     margin: 2px 0; 
+    color: rgb(0, 195, 255);
 
 }
 
 .Edu-d{
-    color: white;
     font-size: 16px;
+
 }
 
 .Edu-g {
-    color: rgb(0, 195, 255);
+    
     font-size: 14px;
     font-weight: 600;
 
