--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,13 +8,14 @@ html {
   justify-content: center;
   align-items: center;
   height: 54px;
-  background-color: #212121;
+  /*background-color: #212121;*/
+  background-color: #010010;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   position: fixed;
   width: 100%;
   top: 0;
   z-index: 1000;
-  margin-left: -32px;
+  margin-left: -20px;
 }
 
 .nav-links {
@@ -24,7 +25,8 @@ html {
   list-style: none;
   padding: 0;
   margin: 0;
-  gap: 30px; 
+  gap: 20px; 
+  /*margin-left: -32px;*/
 }
 
 .nav-links li {
@@ -33,9 +35,10 @@ html {
 
 .nav-links a {
   text-decoration: none;
-  color: #13c2b3;
+  /*color: #3dafe3;*/
+  color: #899dee;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 600;
   transition: all 0.3s ease-in-out;
   padding: 8px 12px;
 }
