--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -71,7 +71,7 @@
     display: inline-block;
     margin-top: 15px;
     padding: 10px 20px;
-    background: #06336d;
+    background: #2b03f2;
     color: rgb(220, 218, 218);
     text-decoration: none;
     border-radius: 50px;
