--- a/src/components/Projcard.css
+++ b/src/components/Projcard.css
@@ -23,11 +23,12 @@
 }
 
 .Proj-card-container img {
-    height: 110px; 
+    height: 130px; 
     object-fit: contain; 
     display: block;
     margin: 0 auto;
     transition: all 0.3s ease-in-out;
+    border-radius: 25px;
 }
 
 
